WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79552
[Mac] Release localized Strings instead of AutoRelease
https://bugs.webkit.org/show_bug.cgi?id=79552
Summary
[Mac] Release localized Strings instead of AutoRelease
Benjamin Poulain
Reported
2012-02-24 19:14:03 PST
This make other stuff easier to follow in instruments;
Attachments
Patch
(11.95 KB, patch)
2012-02-24 21:14 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(11.96 KB, patch)
2012-02-24 22:26 PST
,
Benjamin Poulain
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-02-24 21:14:34 PST
Created
attachment 128847
[details]
Patch
Benjamin Poulain
Comment 2
2012-02-24 22:26:35 PST
Created
attachment 128855
[details]
Patch
Benjamin Poulain
Comment 3
2012-02-24 22:27:09 PST
The last update replace all the #import by #include.
Benjamin Poulain
Comment 4
2012-02-26 22:28:08 PST
Committed
r108956
: <
http://trac.webkit.org/changeset/108956
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug