[Mac] Release localized Strings instead of AutoRelease https://bugs.webkit.org/show_bug.cgi?id=79552

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-02-26
Reviewed by Sam Weinig.

By using the CoreFoundation API, we can release the memory as soon as
the WTF::String is created.

* WebCore.xcodeproj/project.pbxproj:
* platform/mac/LocalizedStringsMac.cpp: Renamed from Source/WebCore/platform/mac/LocalizedStringsMac.mm.
(WebCore):
(WebCore::localizedString):


Canonical link: https://commits.webkit.org/96726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108956 268f45cc-cd09-0410-ab3c-d52691b4dbfc